kubernetes/apps/default/n8n/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: default
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
