kubernetes/apps/default/n8n/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: default
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/instance: n8n
spec:
  hostnames:
    - n8n.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 80
